--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.19.4
 supported_minecraft_versions=1.19.4
-loader_version=0.14.19
-yarn_mappings=1.19.4+build.1
+loader_version=0.14.21
+yarn_mappings=1.19.4+build.2
 fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
@@ -17,7 +17,7 @@ archives_base_name_blockus=extshape_blockus
 
 # Dependencies
 fabric_api_version=0.78.0+1.19.4
-modmenu_version=6.1.0-rc.4
+modmenu_version=6.2.1
 brrp_version=1.0.0
 blockus_version=4483337
 terraform_version=6.0.0-beta.1
